# Coagent

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json
.codex/skills/coagent-dev/: SKILL.md
crates/coagent-mcp-server/: Cargo.toml
crates/coagent-mcp-server/src/: config.rs  main.rs
crates/coagent-mcp-server/tests/: mock_schema_validation.rs  reasonix_integration.rs
crates/coagent-runtime-core/: Cargo.toml
crates/coagent-runtime-core/src/: lib.rs
crates/coagent-runtime-core/tests/: artifact_policy.rs  canonical_json.rs  complex_integration.rs  policy_engine.rs  runtime_kernel.rs  schema_registry.rs  sqlite_store.rs  state_machine.rs
crates/coagent-runtime-worker/: Cargo.toml
crates/coagent-runtime-worker/src/: main.rs
crates/coagent-runtime-worker/tests/: json_rpc_worker.rs
crates/coasonix-runtime-core/: Cargo.toml
crates/coasonix-runtime-core/src/: lib.rs
crates/coasonix-runtime-core/tests/: artifact_policy.rs  policy_engine.rs  runtime_kernel.rs  sqlite_store.rs  state_machine.rs
docs/coagent/: README.md
docs/coagent/architecture/: 00-collaboration-model.md  01-runtime.md  02-mcp-server.md  03-general-agent-runtime-gaps.md  04-backlog.md  05-v3-blueprint.md  06-v3.1-roadmap.md
docs/coasonix/: 00-collaboration-model.md  00-executive-summary.md  README.md
docs/coasonix/01-architecture/: 01-overview-and-roles.md  (+3 more)
docs/implementation/: codex-side-gateway-roadmap.md  gaps-to-production.md  review-diff-agent-collaboration-plan.md  v1-mvp-execution-plan.md
schemas/: coagent-v1.schema.json  coasonix-v1.schema.json
(+49 files in other folders)
