[workspace]
members = [
    "crates/coagent-runtime-core",
    "crates/coagent-runtime-worker",
    "crates/coagent-mcp-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
coagent-runtime-core = { path = "crates/coagent-runtime-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = { version = "0.46.8", default-features = false }
rusqlite = { version = "0.40.1", features = ["bundled"] }
sha2 = "0.10"
thiserror = "2.0"


